--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    My App
-  </h1>
-</div>
-<router-outlet></router-outlet>
+<body>
+  <app-header> </app-header>
+  
+  <router-outlet></router-outlet>
+  
+  <app-footer> </app-footer>
+
+</body>
+
+
